--- a/scripts/train_cnn_on_data.ipynb
+++ b/scripts/train_cnn_on_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -17,18 +17,73 @@
    },
    "outputs": [],
    "source": [
-    "from create_dataset import ImageNetSubset"
+    "from dataset import ImageNetSubset\n",
+    "from torchvision import transforms\n",
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "trusted": true
    },
    "outputs": [],
    "source": [
-    "full_dataset = ImageNetSubset()"
+    "root = os.path.join('..', 'data', 'ImageNetSubset')\n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((64, 64)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.5,), (0.5,))\n",
+    "])\n",
+    "\n",
+    "\n",
+    "\n",
+    "full_dataset = ImageNetSubset(root=root, transform=transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[0.7961, 0.7961, 0.7961,  ..., 0.7490, 0.7451, 0.7373],\n",
+       "          [0.7961, 0.7961, 0.7961,  ..., 0.7490, 0.7451, 0.7373],\n",
+       "          [0.7961, 0.7961, 0.7961,  ..., 0.7490, 0.7451, 0.7412],\n",
+       "          ...,\n",
+       "          [0.7490, 0.7490, 0.7490,  ..., 0.7098, 0.7098, 0.7098],\n",
+       "          [0.7490, 0.7490, 0.7490,  ..., 0.7098, 0.7098, 0.7098],\n",
+       "          [0.7490, 0.7490, 0.7490,  ..., 0.7098, 0.7098, 0.7098]],\n",
+       " \n",
+       "         [[0.8353, 0.8353, 0.8353,  ..., 0.8000, 0.8000, 0.8000],\n",
+       "          [0.8353, 0.8353, 0.8353,  ..., 0.8000, 0.8000, 0.8000],\n",
+       "          [0.8353, 0.8353, 0.8353,  ..., 0.8000, 0.8000, 0.8039],\n",
+       "          ...,\n",
+       "          [0.8000, 0.8000, 0.8000,  ..., 0.7569, 0.7569, 0.7569],\n",
+       "          [0.8000, 0.8000, 0.8000,  ..., 0.7569, 0.7569, 0.7569],\n",
+       "          [0.8000, 0.8000, 0.8000,  ..., 0.7569, 0.7569, 0.7569]],\n",
+       " \n",
+       "         [[0.8824, 0.8824, 0.8824,  ..., 0.8745, 0.8667, 0.8510],\n",
+       "          [0.8824, 0.8824, 0.8824,  ..., 0.8745, 0.8667, 0.8510],\n",
+       "          [0.8824, 0.8824, 0.8824,  ..., 0.8745, 0.8667, 0.8549],\n",
+       "          ...,\n",
+       "          [0.8353, 0.8353, 0.8353,  ..., 0.8118, 0.8118, 0.8118],\n",
+       "          [0.8353, 0.8353, 0.8353,  ..., 0.8118, 0.8118, 0.8118],\n",
+       "          [0.8353, 0.8353, 0.8353,  ..., 0.8118, 0.8118, 0.8118]]]),\n",
+       " tensor(8))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_dataset[1]"
    ]
   },
   {
