--- a/scripts/train_cnn_on_data.ipynb
+++ b/scripts/train_cnn_on_data.ipynb
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "from dataset import ImageNetSubset\n",
+    "from src.dataset import ImageNetSubset\n",
     "from torchvision import transforms\n",
     "import os\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
@@ -151,7 +151,6 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
     "dataiter = iter(trainloader)\n",
     "images, labels = next(dataiter)\n",
