added learningbydoing notebook

--- a/scripts/train_cnn_on_data.ipynb
+++ b/scripts/train_cnn_on_data.ipynb
@@ -33,7 +33,9 @@
    },
    "outputs": [],
    "source": [
-    "root = os.path.join('..', 'data', 'ImageNetSubset')\n",
+    "root_train = os.path.join('..', 'data', 'ImageNetSubset')\n",
+    "root_test = ...\n",
+    "\n",
     "\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((256,192)),\n",
@@ -43,50 +45,8 @@
     "\n",
     "\n",
     "\n",
-    "full_dataset = ImageNetSubset(root=root, transform=transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[[0.5922, 0.5922, 0.5922,  ..., 0.4980, 0.4902, 0.4745],\n",
-       "          [0.5922, 0.5922, 0.5922,  ..., 0.4980, 0.4902, 0.4745],\n",
-       "          [0.5922, 0.5922, 0.5922,  ..., 0.4980, 0.4902, 0.4824],\n",
-       "          ...,\n",
-       "          [0.4980, 0.4980, 0.4980,  ..., 0.4196, 0.4196, 0.4196],\n",
-       "          [0.4980, 0.4980, 0.4980,  ..., 0.4196, 0.4196, 0.4196],\n",
-       "          [0.4980, 0.4980, 0.4980,  ..., 0.4196, 0.4196, 0.4196]],\n",
-       " \n",
-       "         [[0.6706, 0.6706, 0.6706,  ..., 0.6000, 0.6000, 0.6000],\n",
-       "          [0.6706, 0.6706, 0.6706,  ..., 0.6000, 0.6000, 0.6000],\n",
-       "          [0.6706, 0.6706, 0.6706,  ..., 0.6000, 0.6000, 0.6078],\n",
-       "          ...,\n",
-       "          [0.6000, 0.6000, 0.6000,  ..., 0.5137, 0.5137, 0.5137],\n",
-       "          [0.6000, 0.6000, 0.6000,  ..., 0.5137, 0.5137, 0.5137],\n",
-       "          [0.6000, 0.6000, 0.6000,  ..., 0.5137, 0.5137, 0.5137]],\n",
-       " \n",
-       "         [[0.7647, 0.7647, 0.7647,  ..., 0.7490, 0.7333, 0.7020],\n",
-       "          [0.7647, 0.7647, 0.7647,  ..., 0.7490, 0.7333, 0.7020],\n",
-       "          [0.7647, 0.7647, 0.7647,  ..., 0.7490, 0.7333, 0.7098],\n",
-       "          ...,\n",
-       "          [0.6706, 0.6706, 0.6706,  ..., 0.6235, 0.6235, 0.6235],\n",
-       "          [0.6706, 0.6706, 0.6706,  ..., 0.6235, 0.6235, 0.6235],\n",
-       "          [0.6706, 0.6706, 0.6706,  ..., 0.6235, 0.6235, 0.6235]]]),\n",
-       " tensor(8))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "full_dataset[1]"
+    "dataset_train = ImageNetSubset(root=root_train, transform=transform)\n",
+    "dataset_test = CustomImageDataset(root=root_test, transform=transform)\n"
    ]
   },
   {
@@ -104,8 +64,8 @@
     "train_size = int(0.8 * len(full_dataset))\n",
     "test_size = len(full_dataset) - train_size\n",
     "\n",
-    "train_dataset, test_dataset = random_split(\n",
-    "    full_dataset,\n",
+    "train_dataset, val_dataset = random_split(\n",
+    "    dataset_train,\n",
     "    [train_size, test_size],\n",
     "    generator=torch.Generator().manual_seed(42),\n",
     ")\n",
@@ -114,7 +74,10 @@
     "\n",
     "trainloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
     "\n",
+    "valloader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size,shuffle=False, num_workers=2)\n",
+    "\n",
     "testloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size,shuffle=False, num_workers=2)\n",
+    "\n",
     "\n",
     "classes = ('coffee-mug', 'notebook', 'remote-control', 'soup-bowl', 'teapot', 'wooden-spoon', 'computer-keyboard', 'mouse', 'binder', 'toilet-tissue')"
    ]
