--- a/scripts/training_loop.ipynb
+++ b/scripts/training_loop.ipynb
@@ -36,6 +36,22 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#check if paths are correct in different machines / operating systems\n",
+    "\n",
+    "print(\"Train path:\", os.path.abspath(root_train))\n",
+    "print(\"Exists?\", os.path.exists(root_train))\n",
+    "\n",
+    "print(\"Test path:\", os.path.abspath(root_test))\n",
+    "print(\"Exists?\", os.path.exists(root_test))\n"
+   ],
+   "id": "25f47c21e67b28c2"
+  },
+  {
    "cell_type": "markdown",
    "id": "f9469244",
    "metadata": {},
@@ -62,9 +78,9 @@
     "    generator=Generator().manual_seed(42),\n",
     ")\n",
     "\n",
-    "trainloader = DataLoader(dataset_train, batch_size=32, shuffle=True, num_workers=4)\n",
-    "valloader = DataLoader(dataset_val, batch_size=32, shuffle=False, num_workers=4)\n",
-    "testloader = DataLoader(dataset_test, batch_size=32, shuffle=False, num_workers=4)"
+    "trainloader = DataLoader(dataset_train, batch_size=32, shuffle=True, num_workers=0)\n",
+    "valloader = DataLoader(dataset_val, batch_size=32, shuffle=False, num_workers=0)\n",
+    "testloader = DataLoader(dataset_test, batch_size=32, shuffle=False, num_workers=0)"
    ]
   },
   {
@@ -148,8 +164,15 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(net.parameters(), lr=1e-3, weight_decay=1e-4)\n",
     "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print(\"Device:\", device)\n",
+    "# Device selection: MPS (Apple Silicon) > CUDA > CPU\n",
+    "if torch.backends.mps.is_available():\n",
+    "    device = torch.device(\"mps\")\n",
+    "elif torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "\n",
+    "print(\"Using device:\", device)\n",
     "net.to(device)\n",
     "\n",
     "writer = SummaryWriter(log_dir=f'./runs/LargerNet/exp_{int(time.time())}')\n",
@@ -243,7 +266,7 @@
     "with torch.no_grad():\n",
     "    for data in testloader:\n",
     "        images, labels = data\n",
-    "        images, labels = images.cuda(), labels.cuda()\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        outputs = net(images)\n",
     "        _, predicted = torch.max(outputs, 1)\n",
     "        total += labels.size(0)\n",
