Fixed ramdom_split and augmentation
Changed random_split so that only pictures in training dataset get augmentet and optimized augmentation to be less aggressive and swapped rotation to RandomResizeCrop

--- a/scripts/training_loop.ipynb
+++ b/scripts/training_loop.ipynb
@@ -10,19 +10,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "38657a9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "from torchvision import transforms\n",
+    "from torchvision.transforms import InterpolationMode\n",
     "import sys\n",
     "import os\n",
     "\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
     "from src.dataset import ImageDataset\n",
     "\n",
-    "transform = transforms.Compose([\n",
+    "train_transform = transforms.Compose([\n",
+    "    transforms.Resize((272, 272), interpolation=InterpolationMode.BILINEAR),\n",
+    "    transforms.RandomResizedCrop(\n",
+    "        (256, 256),\n",
+    "        scale=(0.85, 1.0),\n",
+    "        ratio=(0.9, 1.1),\n",
+    "        interpolation=InterpolationMode.BILINEAR,\n",
+    "    ),\n",
+    "    transforms.RandomHorizontalFlip(p=0.5),\n",
+    "    transforms.ColorJitter(brightness=0.12, contrast=0.12, saturation=0.08),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+    "])\n",
+    "\n",
+    "eval_transform = transforms.Compose([\n",
     "    transforms.Resize((256,256)),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
@@ -31,8 +46,9 @@
     "root_train = os.path.join('..', 'data', 'ImageNetSubset')\n",
     "root_test = os.path.join('..', 'data', 'collected_dataset')\n",
     "\n",
-    "dataset_train = ImageDataset(root=root_train, transform=transform, train=True)\n",
-    "dataset_test = ImageDataset(root=root_test, transform=transform, train=False)\n"
+    "dataset_train = ImageDataset(root=root_train, transform=train_transform, train=True)\n",
+    "dataset_eval = ImageDataset(root=root_train, transform=eval_transform, train=True)\n",
+    "dataset_test = ImageDataset(root=root_test, transform=eval_transform, train=False)\n"
    ]
   },
   {
@@ -78,19 +94,23 @@
    "outputs": [],
    "source": [
     "from torch import Generator\n",
-    "from torch.utils.data import random_split, DataLoader\n",
+    "from torch.utils.data import random_split, DataLoader, Subset\n",
     "\n",
-    "train_size = int(0.8 * len(dataset_train))\n",
-    "test_size = len(dataset_train) - train_size\n",
+    "n = len(dataset_train)\n",
+    "train_size = int(0.8 * n)\n",
+    "val_size = n - train_size\n",
     "\n",
-    "dataset_train, dataset_val = random_split(\n",
-    "    dataset_train,\n",
-    "    [train_size, test_size],\n",
+    "train_idx, val_idx = random_split(\n",
+    "    range(n),\n",
+    "    [train_size, val_size],\n",
     "    generator=Generator().manual_seed(42),\n",
     ")\n",
     "\n",
-    "trainloader = DataLoader(dataset_train, batch_size=64, shuffle=True, num_workers=4)\n",
-    "valloader = DataLoader(dataset_val, batch_size=64, shuffle=False, num_workers=4)\n",
+    "train_dataset = Subset(dataset_train,  train_idx.indices)   # augmented\n",
+    "val_dataset   = Subset(dataset_eval, val_idx.indices)     # clean\n",
+    "\n",
+    "trainloader = DataLoader(train_dataset, batch_size=64, shuffle=True, num_workers=4)\n",
+    "valloader = DataLoader(val_dataset, batch_size=64, shuffle=False, num_workers=4)\n",
     "testloader = DataLoader(dataset_test, batch_size=64, shuffle=False, num_workers=4)"
    ]
   },
